Services-Networking/labs/networkPolicies/final/api.yml
apiVersion: v1
kind: Pod 
metadata:
  name: api 
  labels:
    tier: api

spec:
  containers:
    - name: api
      image: busybox
      command: ["tail", "-f", ">", "/dev/null"]
