Services-Networking/labs/networkPolicies/final/db.yml
apiVersion: v1
kind: Pod 
metadata: 
  name: db
  labels:
    tier: db

spec:
  containers:
    - name: db
      image: postgres
