Services-Networking/labs/networkPolicies/final/web.yml
apiVersion: v1
kind: Pod 
metadata:
  name: web
  labels:
    tier: web 

spec: 
  containers:
    - name: web
      image: busybox
      command: ["tail", "-f", ">", "/dev/null"]
