Services-Networking/labs/networkPolicies/final/denyall.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all

spec:
  podSelector: {}
  policyTypes:
  - Ingress
