Services-Networking/labs/networkPolicies/final/networkPolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy 
metadata:
  name: allow-db-from-api

spec:
  podSelector:
    matchLabels:
      tier: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: api
    ports:    
    - protocol: TCP 
      port: 5432
